--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@langchain/community": "^0.2.20",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
+    "langchain": "^0.2.10",
+    "ollama": "^0.5.6",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "simple-git": "^3.25.0"
